--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,17 @@
   margin-left: 50px;
   color: red;
 }
+
+.login {
+  padding: 20px;
+  border: 3px solid black;
+  font-size: 20px;
+  margin: 30px;
+}
+
+.login-btn {
+  padding: 10px;
+  border: 1px solid black;
+  cursor: pointer;
+  display: inline-block;
+}
