local storage user info save

--- a/src/Profile/Profile.css
+++ b/src/Profile/Profile.css
@@ -11,5 +11,13 @@
 }
 
 .profile-full-name {
-    margin-top: 30px;
+    
+}
+
+.profile-random-number {
+    
+}
+
+.profile-item {
+    margin: 15px 0;
 }
