--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -6,6 +6,13 @@
     height: 100vh;
     width: 100vw;
   }
+
+  .view-profile {
+    font-size: 30px;
+    position: absolute;
+    top: 50px;
+    right: 50px;
+  }
   
   .check-connection {
     font-size: 25px;
